<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_layout_main">

    <ScrollView
        android:id="@+id/svContentView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlBanner"
                android:layout_width="fill_parent"
                android:layout_height="148dp"
                android:background="@drawable/banner">

                <com.ken.my_custom_view.CircleImage
                    android:id="@+id/ivAvatarBanner"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="45dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/tvTitleBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/ivAvatarBanner"
                    android:text="@string/my_music"
                    android:textColor="#fff"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTotalSong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTitleBanner"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/ivAvatarBanner"
                    android:text="234"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTitleBanner"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/tvTotalSong"
                    android:text="@string/bai_hat"
                    android:textColor="#fff"
                    android:textSize="14sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llWrapperContent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/rlBanner"
                android:background="#fcfcfc"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/nhac_offline"
                    android:textColor="#888888"
                    android:textSize="14sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/basic_color" />

                <RelativeLayout
                    android:id="@+id/rlOfflineMusic"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_item_main_selector"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/ivIconMusicView"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="@string/description_icon_music_view"
                        android:src="@drawable/icon_music_view" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/ivIconMusicView"
                        android:text="@string/bai_hat_s"
                        android:textColor="#000"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvSongTotalView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:text="86"
                        android:textColor="#888888"
                        android:textSize="14sp" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#FFF" />

                <RelativeLayout
                    android:id="@+id/rlOfflineAlbum"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_item_main_selector"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/ivIconAlbumView"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="@string/description_icon_album_view"
                        android:src="@drawable/icon_album_view" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/ivIconAlbumView"
                        android:text="@string/album"
                        android:textColor="#000"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvAlbumTotalView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:text="12"
                        android:textColor="#888888"
                        android:textSize="14sp" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#FFF" />

                <RelativeLayout
                    android:id="@+id/rlOfflineArtist"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_item_main_selector"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/ivIconArtistView"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/icon_artist_view" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/ivIconArtistView"
                        android:text="@string/ca_si"
                        android:textColor="#000"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvArtistTotalView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:text="32"
                        android:textColor="#888888"
                        android:textSize="14sp" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#FFF" />

                <RelativeLayout
                    android:id="@+id/rlOfflinePlayList"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_item_main_selector"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/ivIconPlaylistView"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/icon_playlist_view" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/ivIconPlaylistView"
                        android:text="@string/playlist"
                        android:textColor="#000"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvPlaylistTotalView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:text="0"
                        android:textColor="#888888"
                        android:textSize="14sp" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#FFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/nhac_online"
                    android:textColor="#888888"
                    android:textSize="14sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/basic_color" />

                <RelativeLayout
                    android:id="@+id/rlOnlineSearch"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_item_main_selector"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/ivIconSearchOnlineView"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/icon_playlist_view" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/ivIconSearchOnlineView"
                        android:text="Tìm kiếm bài hát "
                        android:textColor="#000"
                        android:textSize="14sp" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#FFF" />

                <RelativeLayout
                    android:id="@+id/rlOnlineBxh"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_item_main_selector"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/ivIconBXHView"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/icon_playlist_view" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/ivIconBXHView"
                        android:text="Bảng Xếp Hạng"
                        android:textColor="#000"
                        android:textSize="14sp" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#FFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/blog_truyen"
                    android:textColor="#888888"
                    android:textSize="14sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/basic_color" />

                <RelativeLayout
                    android:id="@+id/rlOnlineBlogTruyen"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_item_main_selector"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/ivIconBlogTruyenView"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/icon_music_view" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/ivIconBlogTruyenView"
                        android:text="Blog Truyện Online"
                        android:textColor="#000"
                        android:textSize="14sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
